<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_target_hours_title"
        android:key="pref_target_hours">
        <EditTextPreference
            android:key="pref_key_total_hours"
            android:title="@string/pref_total_hours_title"
            android:summary="@string/pref_total_hours_summary"
            android:defaultValue="50"
            android:numeric="integer"/>
        <EditTextPreference
            android:key="pref_key_daytime_hours"
            android:title="@string/pref_daytime_hours_title"
            android:summary="@string/pref_daytime_hours_summary"
            android:defaultValue="40"
            android:numeric="integer"/>
        <EditTextPreference
            android:key="pref_key_nighttime_hours"
            android:title="@string/pref_nighttime_hours_title"
            android:summary="@string/pref_nighttime_hours_summary"
            android:defaultValue="10"
            android:numeric="integer"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Sunrise and Sunset Times">
        <com.centricconsulting.driversedtracker.settings.TimePickerPreference
            android:defaultValue="08:00"
            android:key="sunrise_time"
            android:showDefault="true"
            android:summary="When is sunrise"
            android:title="Sunrise" />
        <com.centricconsulting.driversedtracker.settings.TimePickerPreference
            android:defaultValue="20:00"
            android:key="sunset_time"
            android:showDefault="true"
            android:summary="When is sunset"
            android:title="Sunset" />
    </PreferenceCategory>
</PreferenceScreen>