<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background_light"
    tools:context="com.centricconsulting.driversedtracker.timer.TimerFragment">

    <TextView
        style="@style/ElapsedTimeTextAppearance"
        android:id="@+id/timer_elapsed_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        style="@style/TimerButton"
        android:id="@+id/timer_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_start_button_text"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/timer_elapsed_time_text"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/TimerButton"
        android:id="@+id/timer_reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_reset_button_text"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/timer_start_button"
        android:layout_toLeftOf="@+id/timer_start_button"
        android:layout_toStartOf="@+id/timer_start_button" />

    <Button
        style="@style/TimerButton"
        android:id="@+id/timer_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_save_button_text"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/timer_start_button"
        android:layout_toRightOf="@+id/timer_start_button"
        android:layout_toEndOf="@+id/timer_start_button" />

</RelativeLayout>
